src/main/java/com/example/tennisapp/global/error/ErrorCode.java
package com.example.tennisapp.global.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
	HttpStatus getHttpStatus();
	String getMessage();
}
